Fix grid on tablet

--- a/css/grid.scss
+++ b/css/grid.scss
@@ -7,7 +7,6 @@ $grid-padding: $cell-border-width / 2;
 .grid {
     display: flex;
     flex-direction: column;
-    flex: auto;
     width: 100%;
     padding: $grid-padding;
     box-sizing: border-box;
